--- a/app/views/index.html
+++ b/app/views/index.html
@@ -63,8 +63,19 @@
       <p>This is the prototype for General Medical Council users</p>
 
       <div>
-        <a href="beta-sprint-3/ra-user-flow-1-with-approval/" role="button" draggable="false" class="govuk-button govuk-button--start" data-module="govuk-button">
+        <a href="beta-sprint-3/ra-user-flow-1-without-approval/" role="button" draggable="false" class="govuk-button govuk-button--start" data-module="govuk-button">
           Login as a General Medical Council user
+          <svg class="govuk-button__start-icon" xmlns="http://www.w3.org/2000/svg" width="17.5" height="19" viewbox="0 0 33 40" role="presentation" focusable="false">
+            <path fill="currentColor" d="M0 0h13l20 20-20 20H0l20-20z"></path>
+          </svg>
+        </a>
+      </div>
+
+      <p>This is the prototype for UKCPQ users</p>
+
+      <div>
+        <a href="beta-sprint-3/ukcpq-user-flow-1-without-approval/" role="button" draggable="false" class="govuk-button govuk-button--start" data-module="govuk-button">
+          Login as a UKCPQ user
           <svg class="govuk-button__start-icon" xmlns="http://www.w3.org/2000/svg" width="17.5" height="19" viewbox="0 0 33 40" role="presentation" focusable="false">
             <path fill="currentColor" d="M0 0h13l20 20-20 20H0l20-20z"></path>
           </svg>
