--- a/app/views/beta-sprint-3/ukcpq-user-flow-1-without-approval/profession-5-new-profession.html
+++ b/app/views/beta-sprint-3/ukcpq-user-flow-1-without-approval/profession-5-new-profession.html
@@ -1,8 +1,10 @@
 {% extends "layout.html" %}
 
 {% block pageTitle %}
-  Registered Gas Engineer
+  data['new-profession-title']
 {% endblock %}
+
+{% set bodyClasses = "rpr-internal__page" %}
 
 {% block beforeContent %}
   {% from 'govuk/components/phase-banner/macro.njk' import govukPhaseBanner %}
@@ -20,9 +22,9 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
 
-      <span class="govuk-caption-l">Capita Gas Registration and Ancillary Services Ltd</span>
+      <span class="govuk-caption-l">General Medical Council</span>
       <h1 class="govuk-heading-xl">
-        Registered Gas Engineer
+        {{ data['new-profession-title'] }}
       </h1>
 
       {{ govukSummaryList({
@@ -41,7 +43,7 @@
               text: "Industry / sector"
             },
             value: {
-              text: "Construction & Engineering"
+              text: "Health"
             }
           }
         ]
@@ -61,7 +63,7 @@
               text: "Regulated authority"
             },
             value: {
-              text: "Capita Gas Registration and Ancillary Services Ltd"
+              text: "General Medical Council"
             }
           },
           {
@@ -69,7 +71,7 @@
               text: "Website"
             },
             value: {
-              html: '<a href="https://www.gassaferegister.co.uk/help-and-advice/becoming-registered/apply-now/" class="govuk-link">https://www.gassaferegister.co.uk/help-and-advice/becoming-registered/apply-now/</a>'
+              text: "N/A"
             }
           },
           {
@@ -77,7 +79,7 @@
               text: "Address"
             },
             value: {
-              html: '200 Chineham Park</br>Basingstoke</br>RG24 8WD'
+              html: '350 Euston Road</br>London</br>NW1 3JN'
             }
           },
           {
@@ -87,13 +89,13 @@
             value: {
               text: "N/A"
             }
-          },        
+          },          
           {
             key: {
               text: "Phone number"
             },
             value: {
-              text: "+44 (0) 7766 397564"
+              text: "+44 161 923 6602"
             }
           },
           {
@@ -101,7 +103,7 @@
               text: "Registration with regulator is"
             },
             value: {
-              text: "Voluntary"
+              text: "Mandatory"
             }
           }
         ]
@@ -121,7 +123,7 @@
               text: "Reserved activities"
             },
             value: {
-              text: "Gas Safe Register is the official list of gas engineers in the UK, Isle of Man and Guernsey. To work on gas appliances and installations you must be on the gas safe register. The register exists to protect the public from unsafe gas work (EN)"
+              text: "[no data]"
             }
           },
           {
@@ -129,7 +131,7 @@
               text: "Description of activities / regulation description"
             },
             value: {
-              text: "Gas Safe Register is the official list of gas engineers in the UK, Isle of Man and Guernsey. Gas installers work on gas appliances and installations."
+              text: "Basic radiation safety: Understanding legal requirements for safe handling of radioisotopes: Basic science underpinning safe practice of nuclear medicine: Assessment of patientâ€™s condition and appropriateness of diagnostic test: An understanding of how to conduct nuclear medicine tests and skills to report those tests accurately and understand how these results fit into the patient's ongoing management: Understand appropriate and safe administration of radionuclide therapy and relevant patient aftercare for patient and their families: Communication with patients and other members of nuclear medicine team: Understanding inter-relationship of nuclear medicine studies and other diagnostic tests: Building skills in communicating results of investigations with clinicians: Safe and appropriate uses of interventions such as cardiac testing: Understanding role of the Nuclear Medicine Physician as a medical profession in the health service: Promoting personal and professional development."
             }
           }
         ]
@@ -149,7 +151,7 @@
               text: "Qualification level"
             },
             value: {
-              text: "ATT - Attestation of competence , Art. 11 a"
+              text: "PSM - Diploma from post-secondary level (more than 4 years) , Art. 11 e"
             }
           },
           {
@@ -157,7 +159,7 @@
               text: "Methods to obtain qualification"
             },
             value: {
-              text: "Accredited Certification Scheme accredited by the United Kongdom Accrediation Service UKAS in accordance with ISO EN 17024 or an approprate National/Scottish Vocational Qualification at level 2"
+              text: "Vocational post-secondary education level"
             }
           },
           {
@@ -165,7 +167,7 @@
               text: "Most common path to obtain qualification"
             },
             value: {
-              text: "General seconday education"
+              text: "Vocational post-secondary education level"
             }
           },
           {
@@ -173,7 +175,7 @@
               text: "Duration of qualification"
             },
             value: {
-              text: "1.0 Year"
+              text: "6.0 Year"
             }
           },
           {
@@ -181,7 +183,7 @@
               text: "Existence of mandatory professional experience"
             },
             value: {
-              text: "No"
+              text: "Yes"
             }
           }
         ]
@@ -201,7 +203,7 @@
               text: "National legislation"
             },
             value: {
-              text: "Gas Safety (Installation and Use ) Regulations 1998"
+              text: "Medical Act 1983"
             }
           },
           {
@@ -209,7 +211,7 @@
               text: "Legislation link"
             },
             value: {
-              html: '<a class="govuk-link" href="http://www.legislation.gov.uk/uksi/1998/2451/made">http://www.legislation.gov.uk/uksi/1998/2451/made</a>'
+              html: '<a class="govuk-link" href="http://www.legislation.gov.uk/ukpga/1983/54/contents">http://www.legislation.gov.uk/ukpga/1983/54/contents</a>'
             }
           }
         ]
@@ -220,18 +222,33 @@
 
     <div class="govuk-grid-column-one-third">
 
-      <aside class="app-related-items" role="complementary">
-        <h2 class="govuk-heading-m" id="subsection-title">
-          Actions
+      <aside class="app-related-items rpr-internal__details-page-sidebar" role="complementary">
+        
+        <h2 class="govuk-heading-s">
+          Status<br>
+          <span class="govuk-body">Published</span>
         </h2>
+
         <nav role="navigation" aria-labelledby="subsection-title">
-          {{ govukButton({
-            text: "Edit this profession"
-          }) }}
+
+          <ul class="govuk-list">
+            <li>
+              {{ govukButton({
+                text: "Edit this profession"
+              }) }}
+            </li>
+            <li>
+              {{ govukButton({
+                text: "Delete this profession",
+                classes: "govuk-button--warning"
+              }) }}
+            </li>
+          </ul>
         </nav>
       </aside>
 
     </div>
+
   </div>
 
 {% endblock %}
