--- a/app/views/beta-sprint-3/ukcpq-user-flow-1-without-approval/profession-4-neurosurgery.html
+++ b/app/views/beta-sprint-3/ukcpq-user-flow-1-without-approval/profession-4-neurosurgery.html
@@ -226,7 +226,7 @@
         
         <h2 class="govuk-heading-s">
           Status<br>
-          <span class="govuk-body">Draft</span>
+          <span class="govuk-body">Published</span>
         </h2>
 
         <nav role="navigation" aria-labelledby="subsection-title">
@@ -241,13 +241,13 @@
                 <input class="govuk-checkboxes__input" id="new-profession-nations" name="new-profession-nations" type="checkbox" value="northern-ireland" type="hidden" checked>
                 <input class="govuk-checkboxes__input" id="new-profession-industries" name="new-profession-industries" type="checkbox" value="health" type="hidden" checked>
                 {{ govukButton({
-                  text: "Continue editing"
+                  text: "Edit this profession"
                 }) }}
               </form>
             </li>
             <li>
               {{ govukButton({
-                text: "Delete draft",
+                text: "Delete this profession",
                 classes: "govuk-button--warning"
               }) }}
             </li>
