--- a/app/views/beta-sprint-3/ukcpq-user-flow-1-without-approval/professions-listing-2.html
+++ b/app/views/beta-sprint-3/ukcpq-user-flow-1-without-approval/professions-listing-2.html
@@ -254,7 +254,7 @@
 
       {% else %}
 
-      <p><span class="govuk-!-font-size-36 govuk-!-font-weight-bold">10</span> professions found.</p>
+      <p><span class="govuk-!-font-size-36 govuk-!-font-weight-bold">19</span> professions found.</p>
 
 
       {{ govukTable({
@@ -273,7 +273,7 @@
             text: "last modified"
           },
           {
-            text: "Modified by"
+            text: "Regulators"
           },
           {
             text: "Status"
@@ -283,6 +283,29 @@
           }
         ],
         rows: [
+          [
+            {
+              text: "Neurology"
+            },
+            {
+              text: "GMCRP153"
+            },
+            {
+              text: "United Kingdom"
+            },
+            {
+              text: "16-12-2021"
+            },
+            {
+              text: "General Medicine Council"
+            },
+            {
+              text: "Published"
+            },
+            {
+              html: '<a class="govuk-link" href="#">View details</a>'
+            }
+          ],
           [
             {
               text: "Neurosurgery"
@@ -297,10 +320,10 @@
               text: "13-12-2021"
             },
             {
-              text: "Alex Young"
+              text: "General Medicine Council"
             },
             {
-              text: "Draft"
+              text: "Published"
             },
             {
               html: '<a class="govuk-link" href="profession-4-neurosurgery">View details</a>'
@@ -320,7 +343,7 @@
               text: "08-11-2021"
             },
             {
-              text: "Alex Young"
+              text: "General Medicine Council"
             },
             {
               text: "Published"
@@ -343,7 +366,76 @@
               text: "16-12-2021"
             },
             {
-              text: "Alex Young"
+              text: "General Medicine Council"
+            },
+            {
+              text: "Published"
+            },
+            {
+              html: '<a class="govuk-link" href="profession-1-plastic-surgery.html">View details</a>'
+            }
+          ],
+          [
+            {
+              text: "Occupational medicine"
+            },
+            {
+              text: "GMCRP157"
+            },
+            {
+              text: "United Kingdom"
+            },
+            {
+              text: "16-12-2021"
+            },
+            {
+              text: "General Medicine Council"
+            },
+            {
+              text: "Published"
+            },
+            {
+              html: '<a class="govuk-link" href="profession-3-nuclear-medicine.html">View details</a>'
+            }
+          ],
+          [
+            {
+              text: "Ophthalmology"
+            },
+            {
+              text: "GMCRP158"
+            },
+            {
+              text: "United Kingdom"
+            },
+            {
+              text: "11-12-2021"
+            },
+            {
+              text: "General Medicine Council"
+            },
+            {
+              text: "Published"
+            },
+            {
+              html: '<a class="govuk-link" href="profession-1-plastic-surgery.html">View details</a>'
+            }
+          ],
+          [
+            {
+              text: "Oral and maxillo-facial surgery"
+            },
+            {
+              text: "GMCRP159"
+            },
+            {
+              text: "United Kingdom"
+            },
+            {
+              text: "02-12-2021"
+            },
+            {
+              text: "General Medicine Council"
             },
             {
               text: "Published"
@@ -366,7 +458,7 @@
               text: "16-12-2021"
             },
             {
-              text: "Alex Young"
+              text: "General Medicine Council"
             },
             {
               text: "Published"
@@ -389,13 +481,36 @@
               text: "27-11-2021"
             },
             {
-              text: "Alex Young"
+              text: "General Medicine Council"
             },
             {
               text: "Published"
             },
             {
               html: '<a class="govuk-link" href="profession-1-plastic-surgery.html">View details</a>'
+            }
+          ],
+          [
+            {
+              text: "Paediatrics"
+            },
+            {
+              text: "GMCRP162"
+            },
+            {
+              text: "United Kingdom"
+            },
+            {
+              text: "13-12-2021"
+            },
+            {
+              text: "General Medicine Council"
+            },
+            {
+              text: "Published"
+            },
+            {
+              html: '<a class="govuk-link" href="profession-3-nuclear-medicine.html">View details</a>'
             }
           ],
           [
@@ -412,7 +527,53 @@
               text: "16-12-2021"
             },
             {
-              text: "Alex Young"
+              text: "General Medicine Council"
+            },
+            {
+              text: "Published"
+            },
+            {
+              html: '<a class="govuk-link" href="profession-1-plastic-surgery.html">View details</a>'
+            }
+          ],
+          [
+            {
+              text: "Public health medicine"
+            },
+            {
+              text: "GMCRP164"
+            },
+            {
+              text: "United Kingdom"
+            },
+            {
+              text: "12-12-2021"
+            },
+            {
+              text: "General Medicine Council"
+            },
+            {
+              text: "Published"
+            },
+            {
+              html: '<a class="govuk-link" href="profession-3-nuclear-medicine.html">View details</a>'
+            }
+          ],
+          [
+            {
+              text: "Renal medicine"
+            },
+            {
+              text: "GMCRP165"
+            },
+            {
+              text: "United Kingdom"
+            },
+            {
+              text: "18-11-2021"
+            },
+            {
+              text: "General Medicine Council"
             },
             {
               text: "Published"
@@ -435,13 +596,59 @@
               text: "02-11-2021"
             },
             {
-              text: "Alex Young"
+              text: "General Medicine Council"
             },
             {
               text: "Published"
             },
             {
               html: '<a class="govuk-link" href="profession-1-plastic-surgery.html">View details</a>'
+            }
+          ],
+          [
+            {
+              text: "Rheumatology"
+            },
+            {
+              text: "GMCRP167"
+            },
+            {
+              text: "United Kingdom"
+            },
+            {
+              text: "13-12-2021"
+            },
+            {
+              text: "General Medicine Council"
+            },
+            {
+              text: "Published"
+            },
+            {
+              html: '<a class="govuk-link" href="profession-3-nuclear-medicine.html">View details</a>'
+            }
+          ],
+          [
+            {
+              text: "Trauma and orthopaedic surgery"
+            },
+            {
+              text: "GMCRP168"
+            },
+            {
+              text: "United Kingdom"
+            },
+            {
+              text: "10-12-2021"
+            },
+            {
+              text: "General Medicine Council"
+            },
+            {
+              text: "Published"
+            },
+            {
+              html: '<a class="govuk-link" href="profession-3-nuclear-medicine.html">View details</a>'
             }
           ],
           [
@@ -458,7 +665,7 @@
               text: "16-12-2021"
             },
             {
-              text: "Alex Young"
+              text: "General Medicine Council"
             },
             {
               text: "Published"
@@ -481,7 +688,7 @@
               text: "16-12-2021"
             },
             {
-              text: "Alex Young"
+              text: "General Medicine Council"
             },
             {
               text: "Published"
@@ -504,7 +711,7 @@
               text: "12-12-2021"
             },
             {
-              text: "Alex Young"
+              text: "General Medicine Council"
             },
             {
               text: "Published"
